style: init basic scaffold

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,2 +1,8 @@
+@import "variables";
 @import "font-face";
-@import "_layout";
+@import "layout";
+@import "typography";
+@import "spacings";
+@import "sizes";
+@import "svg";
+@import "colors";
