--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,5 @@
 // COLORS
 $color-blue: #7398b7;
 $color-orange: #dd753a;
-$color-green: #dfca00;
-$color-yellow: #67a562;
+$color-yellow: #dfca00;
+$color-green: #67a562;
