--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,3 +1,15 @@
-.yellow-box {
+.bg-yellow {
   background-color: $color-yellow;
+}
+
+.bg-blue {
+  background-color: $color-blue;
+}
+
+.bg-green {
+  background-color: $color-green;
+}
+
+.bg-orange {
+  background-color: $color-orange;
 }
