--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,4 @@
+@import "reset";
 @import "variables";
 @import "font-face";
 @import "layout";
@@ -6,3 +7,4 @@
 @import "sizes";
 @import "svg";
 @import "colors";
+@import "utilities";
