--- a/layouts/index.html
+++ b/layouts/index.html
@@ -116,5 +116,45 @@
       </section>
     {{ end }}
 
+    {{ if eq .id "porteurs" }}
+      <section
+        id="{{ .id }}"
+        class="max-w-full w-6xl mx-auto pb-35 px-4 md:px-8"
+      >
+        <div class="flex justify-center">
+          <img src="images/{{ .picto }}" alt="trees" class="w-[100px] mb-20" />
+        </div>
+
+        <div class="flex gap-16 items-center mb-16">
+          <div class="flex-1/2">
+            <h2
+              class="font-boldonse text-2xl leading-[2.3] mb-16 underline decoration-yellow-500 decoration-8 decoration underline-offset-8"
+            >
+              {{ .title }}
+            </h2>
+            <p class="text-lg mb-8">{{ .content1 | markdownify }}</p>
+            <p class="text-lg">{{ .content2 | markdownify }}</p>
+          </div>
+          <div class="flex-1/2">
+            <img
+              srcset="
+                images/pain-400w.webp   400w,
+                images/pain-600w.webp   600w,
+                images/pain-800w.webp   800w,
+                images/pain-1000w.webp 1000w,
+                images/pain-1200w.webp 1200w
+              "
+              sizes="(max-width: 400px) 400px, (max-width: 600px) 600px, (max-width: 800px) 800px, (max-width: 1000px) 1000px, (min-width: 1001px) 1200px"
+              src="images/pain-1200w.webp"
+              alt=""
+              width="1280"
+              height="853"
+              class="w-full rounded-xl"
+            />
+          </div>
+        </div>
+      </section>
+    {{ end }}
+
   {{ end }}
 {{ end }}
