--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,12 +1,16 @@
 {{ define "main" }}
   <!-- Hero Section -->
   {{ with .Params.hero }}
-    <div class="bg-green-500">
-      <section class="max-w-full w-6xl mx-auto px-4 md:px-8 py-50 mb-35">
-        <div class="max-w-200 mx-auto mb-16">
+    <div class="bg-yellow-500">
+      <section
+        class="max-w-full mx-auto px-4 py-24 mb-16 sm:max-w-6xl sm:px-8 sm:py-50"
+      >
+        <div class="max-w-md mx-auto mb-16 sm:max-w-2xl sm:mb-24">
           {{ partial "illustrations/logo-full.html" (dict "class" "w-full") }}
         </div>
-        <h1 class="text-center text-4xl font-boldonse leading-[1.5]">
+        <h1
+          class="text-center text-2xl font-boldonse leading-snug sm:text-4xl "
+        >
           {{ .title }}
         </h1>
       </section>
@@ -19,24 +23,24 @@
     {{ if eq .id "village" }}
       <section
         id="{{ .id }}"
-        class="max-w-full w-6xl mx-auto pb-35 px-4 md:px-8"
+        class="max-w-full w-6xl mx-auto py-8 md:pb-16 px-4 xs:px-8 sm:px-16 md:px-8"
       >
         <div class="flex justify-center">
           <img
             src="images/{{ .picto }}"
             alt="village"
-            class="w-[100px] mb-20"
+            class="w-[60px] md:w-[90px] mb-4 md:mb-8"
           />
         </div>
-        <div class="flex gap-16 items-stretch">
+        <div class="flex flex-col md:flex-row gap-8 md:gap-16 items-stretch">
           <div class="flex-1/2">
             <h2
-              class="font-boldonse text-2xl leading-[2.3] mb-16 underline decoration-orange-500 decoration-8 decoration underline-offset-8"
+              class="font-boldonse text-xl md:text-2xl leading-[2.3] mb-8 md:mb-16 underline decoration-orange-500 decoration-8 decoration underline-offset-8"
             >
               {{ .title }}
             </h2>
-            <p class="text-lg mb-8">{{ .content1 | markdownify }}</p>
-            <p class="text-lg">{{ .content2 | markdownify }}</p>
+            <p class="text-md md:text-lg mb-8">{{ .content1 | markdownify }}</p>
+            <p class="text-md md:text-lg">{{ .content2 | markdownify }}</p>
           </div>
           <div class="flex-1/2">
             <img
@@ -46,18 +50,42 @@
             />
           </div>
         </div>
+
+        <div class="flex flex-col md:flex-row gap-8 md:gap-16 items-stretch">
+          <div class="flex-1/2 flex mt-8 md:mt-16 gap-2 md:gap-4">
+            <a
+              href="#elus"
+              class="bg-green-300 hover:bg-green-400 transition-colors duration-200 px-4 py-4 px-8 rounded-md"
+            >
+              Élu·es ?
+            </a>
+            <a
+              href="#porteurs"
+              class="bg-yellow-300 hover:bg-yellow-400 transition-colors duration-200 px-4 py-4 px-8 rounded-md"
+            >
+              Porteurs de projet ?
+            </a>
+          </div>
+          <div class="flex-1/2"></div>
+        </div>
       </section>
     {{ end }}
 
     {{ if eq .id "elus" }}
       <section
         id="{{ .id }}"
-        class="max-w-full w-6xl mx-auto pb-35 px-4 md:px-8"
+        class="max-w-full w-6xl mx-auto py-8 md:pb-16 px-4 xs:px-8 sm:px-16 md:px-8"
       >
         <div class="flex justify-center">
-          <img src="images/{{ .picto }}" alt="trees" class="w-[100px] mb-20" />
+          <img
+            src="images/{{ .picto }}"
+            alt="trees"
+            class="w-[60px] md:w-[90px] mb-4 md:mb-8"
+          />
         </div>
-        <div class="flex gap-16 items-stretch mb-16">
+        <div
+          class="flex flex-col md:flex-row gap-6 md:gap-16 items-stretch mb-16"
+        >
           <div class="flex-1/2">
             <img
               srcset="
@@ -77,12 +105,12 @@
           </div>
           <div class="flex-1/2">
             <h2
-              class="font-boldonse text-2xl leading-[2.3] mb-16 underline decoration-blue-500 decoration-8 decoration underline-offset-8"
+              class="font-boldonse text-xl md:text-2xl leading-[2.3] mb-8 md:mb-16 underline decoration-green-500 decoration-8 decoration underline-offset-8"
             >
               {{ .title }}
             </h2>
-            <p class="text-lg mb-8">{{ .content1 | markdownify }}</p>
-            <p class="text-lg">{{ .content2 | markdownify }}</p>
+            <p class="text-md md:text-lg mb-8">{{ .content1 | markdownify }}</p>
+            <p class="text-md md:text-lg">{{ .content2 | markdownify }}</p>
           </div>
         </div>
         <div class="max-w-120 mx-auto my-24">
@@ -98,13 +126,15 @@
             {{ .statDescripiton | markdownify }}
           </p>
         </div>
-        <h3 class="font-boldonse text-lg leading-[2.3] mb-8 w-2/3">
+        <h3
+          class="font-boldonse text-md md:text-lg leading-[2] md:leading-[2.3] mb-8 md:w-2/3"
+        >
           {{ .subtitle }}
         </h3>
-        <div class="grid grid-cols-3 gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
           {{ range $index, $element := .keys }}
             <div class="bg-orange-200 p-8 rounded-xl shadow-xl">
-              <p class="text-2xl font-boldonse mb-6">
+              <p class="text-xl md:text-2xl font-boldonse mb-2 md:mb-6">
                 <i>{{ add (int $index) 1 }}.</i>
               </p>
               <p>{{ $element.content }}</p>
@@ -117,20 +147,26 @@
     {{ if eq .id "porteurs" }}
       <section
         id="{{ .id }}"
-        class="max-w-full w-6xl mx-auto pb-35 px-4 md:px-8"
+        class="max-w-full w-6xl mx-auto py-8 md:pb-16 px-4 xs:px-8 sm:px-16 md:px-8"
       >
         <div class="flex justify-center">
-          <img src="images/{{ .picto }}" alt="trees" class="w-[100px] mb-20" />
+          <img
+            src="images/{{ .picto }}"
+            alt="trees"
+            class="w-[60px] md:w-[90px] mb-4 md:mb-8"
+          />
         </div>
 
-        <div class="flex gap-16 items-stretch mb-24">
+        <div
+          class="flex flex-col md:flex-row gap-8 md:gap-16 items-stretch mb-16 md:mb-24"
+        >
           <div class="flex-1/2">
             <h2
-              class="font-boldonse text-2xl leading-[2.3] mb-16 underline decoration-yellow-500 decoration-8 decoration underline-offset-8"
+              class="font-boldonse text-xl md:text-2xl leading-[2.3] mb-8 md:mb-16 underline decoration-yellow-500 decoration-8 decoration underline-offset-8"
             >
               {{ .title }}
             </h2>
-            <p class="text-lg mb-8">{{ .content | markdownify }}</p>
+            <p class="text-md md:text-lg mb-8">{{ .content | markdownify }}</p>
           </div>
           <div class="flex-1/2">
             <img
@@ -150,15 +186,17 @@
             />
           </div>
         </div>
-        <h3 class="font-boldonse text-lg leading-[2.3] mb-8 w-2/3">
+        <h3
+          class="font-boldonse text-md md:text-lg leading-[2] md:leading-[2.3] mb-8 md:w-2/3"
+        >
           {{ .subtitle }}
         </h3>
 
-        <div class="grid grid-cols-3 gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
           {{ range $index, $element := .keys }}
             <div class="bg-yellow-200 p-8 rounded-xl shadow-xl">
               {{ range $element.content }}
-                <p class="text-2xl font-boldonse mb-6">
+                <p class="text-xl md:text-2xl font-boldonse mb-2 md:mb-6">
                   <i>{{ .title }}</i>
                 </p>
                 <p>{{ .description }}</p>
@@ -172,57 +210,65 @@
     {{ if eq .id "equipe" }}
       <section
         id="{{ .id }}"
-        class="max-w-full w-6xl mx-auto pb-35 px-4 md:px-8"
+        class="max-w-full w-6xl mx-auto py-8 md:pb-16 md:px-8"
       >
         <div class="flex justify-center">
-          <img src="images/{{ .picto }}" alt="trees" class="w-[100px] mb-20" />
+          <img
+            src="images/{{ .picto }}"
+            alt="trees"
+            class="w-[60px] md:w-[90px] mb-4 md:mb-8"
+          />
         </div>
 
-        <div class="p-16 bg-blue-100 rounded-xl shadow-xl">
-          <h2
-            class="font-boldonse text-2xl leading-[2.3] mb-16 underline decoration-orange-500 decoration-8 decoration underline-offset-8 text-center"
-          >
-            {{ .title }}
-          </h2>
-          <div class="flex gap-16 items-stretch">
-            <div class="flex-1/2">
-              <img
-                src="images/{{ .illustration }}"
-                alt="village"
-                class="w-full h-full object-cover rounded-xl"
-              />
-            </div>
-            <div class="flex-1/2">
-              <p class="text-lg mb-8">
-                {{ .content1 | markdownify }}
-                {{ range $index, $element := .people }}
-                  {{ if eq $index 1 }}
-                    ,
+        <div class="shadow-xl md:rounded-xl overflow-hidden">
+          <div class="bg-blue-100 p-4 py-16 md:p-16">
+            <h2
+              class="font-boldonse text-left md:text-center text-xl md:text-2xl leading-[2.3] mb-8 md:mb-16 underline decoration-orange-500 decoration-8 decoration underline-offset-8"
+            >
+              {{ .title }}
+            </h2>
+            <div
+              class="flex flex-col lg:flex-row gap-8 md:gap-16 items-stretch"
+            >
+              <div class="flex-1/2">
+                <img
+                  src="images/{{ .illustration }}"
+                  alt="village"
+                  class="w-full h-full object-cover rounded-xl"
+                />
+              </div>
+              <div class="flex-1/2">
+                <p class="text-md md:text-lg mb-8">
+                  {{ .content1 | markdownify }}
+                  {{ range $index, $element := .people }}
+                    {{ if eq $index 1 }}
+                      ,
+                    {{ end }}
+                    {{ if eq $index 2 }}
+                      et
+                    {{ end }}
+                    <a
+                      href="{{ $element.link }}"
+                      class="text-orange-600 underline decoration-orange-600"
+                    >
+                      {{ $element.name }}
+                    </a>
                   {{ end }}
-                  {{ if eq $index 2 }}
-                    et
-                  {{ end }}
-                  <a
-                    href="{{ $element.link }}"
-                    class="text-orange-600 underline decoration-orange-600"
-                  >
-                    {{ $element.name }}
-                  </a>
-                {{ end }}
-              </p>
-              <p class="text-lg mb-8">{{ .content2 | markdownify }}</p>
-              <p class="text-lg">{{ .content3 | markdownify }}</p>
+                </p>
+                <p class="text-md md:text-lg mb-8">
+                  {{ .content2 | markdownify }}
+                </p>
+                <p class="text-md md:text-lg">{{ .content3 | markdownify }}</p>
+              </div>
             </div>
           </div>
-          <div>
-            <h4
-              class="font-boldonse text-lg leading-[2.3] mt-24 mb-8 text-center"
-            >
+          <div class="p-4 py-16 md:p-16">
+            <h4 class="font-boldonse text-lg leading-[2.3] mb-8 text-center">
               {{ .valeursTitle }}
             </h4>
-            <div class="grid grid-cols-4 gap-2">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-2">
               {{ range $index, $element := .valeurs }}
-                {{ $color := cond (eq (mod $index 4) 0) "yellow-400" (cond (eq (mod $index 4) 1) "blue-600" (cond (eq (mod $index 4) 2) "green-600" "orange-600")) }}
+                {{ $color := cond (eq (mod $index 4) 0) "yellow-500" (cond (eq (mod $index 4) 1) "blue-500" (cond (eq (mod $index 4) 2) "green-500" "orange-500")) }}
                 <div class="px-4 py-2 flex items-center justify-center">
                   <p
                     class="text-xs leading-[2.5] font-boldonse text-center underline decoration-{{ $color }} decoration-4 decoration underline-offset-6"
@@ -243,37 +289,52 @@
     {{ if eq .id "soutien" }}
       <section
         id="{{ .id }}"
-        class="max-w-full w-6xl mx-auto pb-35 px-4 md:px-8"
+        class="max-w-full w-6xl mx-auto py-8 md:pb-16 px-4 md:px-8"
       >
         <div class="flex justify-center">
-          <img src="images/{{ .picto }}" alt="trees" class="w-[100px] mb-20" />
+          <img
+            src="images/{{ .picto }}"
+            alt="trees"
+            class="w-[60px] md:w-[90px] mb-4 md:mb-8"
+          />
         </div>
 
         <h2
-          class="font-boldonse text-2xl text-center leading-[2.3] mb-16 underline decoration-green-500 decoration-8 decoration underline-offset-8"
+          class="font-boldonse text-xl md:text-2xl text-center leading-[2.3] mb-8 md:mb-16 underline decoration-blue-500 decoration-8 decoration underline-offset-8"
         >
           {{ .title }}
         </h2>
-        <div class="flex gap-16 justify-center items-center">
+        <div
+          class="flex flex-col md:flex-row gap-8 md:gap-16 justify-center items-center pt-8"
+        >
           {{ range $index, $element := .soutiens }}
             <img
               src="images/{{ $element.image }}"
               alt="{{ $element.alt }}"
-              class="w-80"
+              class="w-60 md:w-80"
             />
           {{ end }}
         </div>
-        <p class="mt-16 text-lg text-center">{{ .content | markdownify }}</p>
+        <p class="mt-16 text-md md:text-lg text-center">
+          {{ .content | markdownify }}
+        </p>
       </section>
     {{ end }}
 
     {{ if eq .id "distinctions" }}
       <section
         id="{{ .id }}"
-        class="max-w-full w-6xl mx-auto pb-35 px-4 md:px-8"
+        class="max-w-full w-6xl mx-auto py-8 md:pb-16 px-4 md:px-8"
       >
+        <div class="flex justify-center">
+          <img
+            src="images/{{ .picto }}"
+            alt="trees"
+            class="w-[60px] md:w-[90px] mb-4 md:mb-8"
+          />
+        </div>
         <h2
-          class="font-boldonse text-2xl text-center leading-[2.3] mb-16 underline decoration-yellow-500 decoration-8 decoration underline-offset-8"
+          class="font-boldonse text-xl md:text-2xl text-center leading-[2.3] mb-8 md:mb-16 underline decoration-yellow-500 decoration-8 decoration underline-offset-8"
         >
           {{ .title }}
         </h2>
@@ -293,16 +354,27 @@
     {{ if eq .id "contact" }}
       <section
         id="{{ .id }}"
-        class="max-w-full w-6xl mx-auto pb-35 px-4 md:px-8"
+        class="max-w-full w-6xl mx-auto py-8 md:pb-16 px-4 md:px-8"
       >
+        <div class="flex justify-center">
+          <img
+            src="images/{{ .picto }}"
+            alt="trees"
+            class="w-[60px] md:w-[90px] mb-4 md:mb-8"
+          />
+        </div>
         <h2
-          class="font-boldonse text-2xl text-center leading-[2.3] mb-16 underline decoration-green-500 decoration-8 decoration underline-offset-8"
+          class="font-boldonse text-xl md:text-2xl text-center leading-[2.3] mb-8 md:mb-16 underline decoration-green-500 decoration-8 decoration underline-offset-8"
         >
           {{ .title }}
         </h2>
-        <p class="text-center">{{ .content | markdownify }}</p>
-        <div class="flex justify-center mt-16">
-          <button class="bg-green-500 px-4 py-4 px-8 rounded-md">
+        <p class="text-center text-md md:text-lg">
+          {{ .content | markdownify }}
+        </p>
+        <div class="flex justify-center mt-12 md:mt-16">
+          <button
+            class="bg-green-300 hover:bg-green-400 transition-colors duration-200 px-4 py-4 px-8 rounded-md cursor-pointer"
+          >
             {{ .cta }}
           </button>
         </div>
