--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,8 +4,8 @@
 @font-face {
   font-family: "Boldonse";
   src:
-    url("/lesbourgeons/fonts/Boldonse-Regular.woff2") format("woff2"),
-    url("/lesbourgeons/fonts/Boldonse-Regular.woff") format("woff");
+    url("/fonts/Boldonse-Regular.woff2") format("woff2"),
+    url("/fonts/Boldonse-Regular.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -14,8 +14,8 @@
 @font-face {
   font-family: "Quicksand";
   src:
-    url("/lesbourgeons/fonts/Quicksand-Medium.woff2") format("woff2"),
-    url("/lesbourgeons/fonts/Quicksand-Medium.woff") format("woff");
+    url("/fonts/Quicksand-Medium.woff2") format("woff2"),
+    url("/fonts/Quicksand-Medium.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
