deploy: fix pathes

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,15 +6,5 @@
 <link rel="stylesheet" href="{{ $styles.Permalink }}" />
 {{ partialCached "css.html" . }}
 
-<link
-  rel="icon"
-  type="image/png"
-  sizes="16x16"
-  href="/lesbourgeons/favicon16x16.png"
-/>
-<link
-  rel="icon"
-  type="image/png"
-  sizes="32x32"
-  href="/lesbourgeons/favicon32x32.png"
-/>
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon16x16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon32x32.png" />
