--- a/layouts/index.html
+++ b/layouts/index.html
@@ -141,6 +141,17 @@
             </div>
           {{ end }}
         </div>
+
+        <div class="w-full flex justify-center mt-12 md:mt-16">
+          <a
+            class="bg-green-300 hover:bg-green-400 transition-colors duration-200 px-4 py-4 px-8 rounded-md cursor-pointer"
+            href="{{ .cta.href }}"
+            target="_blank"
+            rel="noopener"
+          >
+            {{ .cta.label }}
+          </a>
+        </div>
       </section>
     {{ end }}
 
@@ -203,6 +214,17 @@
               {{ end }}
             </div>
           {{ end }}
+        </div>
+
+        <div class="w-full flex justify-center mt-12 md:mt-16">
+          <a
+            class="bg-green-300 hover:bg-green-400 transition-colors duration-200 px-4 py-4 px-8 rounded-md cursor-pointer"
+            href="{{ .cta.href }}"
+            target="_blank"
+            rel="noopener"
+          >
+            {{ .cta.label }}
+          </a>
         </div>
       </section>
     {{ end }}
@@ -372,11 +394,14 @@
           {{ .content | markdownify }}
         </p>
         <div class="flex justify-center mt-12 md:mt-16">
-          <button
+          <a
             class="bg-green-300 hover:bg-green-400 transition-colors duration-200 px-4 py-4 px-8 rounded-md cursor-pointer"
+            href="{{ .cta.href }}"
+            target="_blank"
+            rel="noopener"
           >
-            {{ .cta }}
-          </button>
+            {{ .cta.label }}
+          </a>
         </div>
       </section>
     {{ end }}
